== 1.99.0 (v1.99-deprecation)

== Changes
  * Remove unnecessary dependency on database_cleaner-mongo from database_cleaner-mongoid @botandrose

== Deprecations
  * Deprecate all #orm= setter methods: https://github.com/DatabaseCleaner/database_cleaner/pull/643

== Bugfixes

== 1.8.5 2020-05-04

=== Bug Fixes
  * Fix :mongo strategy: https://github.com/DatabaseCleaner/database_cleaner/pull/645

== 1.8.4 2020-04-02

=== Bug Fixes
  * Fix false positive deprecation warnings on Windows: https://github.com/DatabaseCleaner/database_cleaner/pull/633

== 1.8.3 2020-02-18

=== Bug Fixes
  * Fix performance issue of DatabaseCleaner::Base#orm_module: https://github.com/DatabaseCleaner/database_cleaner/pull/625

== 1.8.2 2020-02-01

=== Bug Fixes
  * Fix database_cleaner-ohm autodetected adapter loading: https://github.com/DatabaseCleaner/database_cleaner/pull/619
  * Fix database_cleaner-mongo_mapper autodetected adapter loading: @botandrose
  * Fix database_cleaner-mongoid autodetected adapter loading: https://github.com/DatabaseCleaner/database_cleaner/pull/617
  * Exclude ar_internal_metadata from truncation on Rails 5: https://github.com/DatabaseCleaner/database_cleaner/pull/588

=== Changes
  * Deprecate ohm adapter: https://github.com/DatabaseCleaner/database_cleaner/pull/619

== 1.8.1 2020-01-30

=== Bug Fixes
  * Remove undeclared active_support dependency: https://github.com/DatabaseCleaner/database_cleaner/pull/612

== 1.8.0 2020-01-29

=== Bug Fixes
  * Fix MySQL deprecation warnings with Rails 5: https://github.com/DatabaseCleaner/database_cleaner/pull/574
  * Fix MySQL truncation with `pre_count: true`: https://github.com/DatabaseCleaner/database_cleaner/pull/498
  * Fix primary key sequence resetting in Sequel with Postgres and SQLite: https://github.com/DatabaseCleaner/database_cleaner/pull/538/files
  * ActiveRecord truncation adapter doesn't work with Oracle: https://github.com/DatabaseCleaner/database_cleaner/pull/542

=== Changes